# $Id$

2007-05-14	Konstantin V. Arkhipov

	* ext/src/core/Exceptions.c: ClassNotFoundException backported from
	trunk.

2007-05-14	Konstantin V. Arkhipov

	* ext/src/core/Exceptions.c: ClassNotFoundException added.

2007-05-13	Konstantin V. Arkhipov

	* meta/types/NumericType.class.php: one more type introduced.

	* main/Criteria/Criteria.class.php: fetchCollection now supports
	distinct and limitizing clauses from given Criteria.

2007-05-10	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: shiny new meta type;
	suggested and implemented by sherman.

	* global.inc.php.tpl: __autoload() now throws ClassNotFoundException
	even if classes paths cache is disabled.

2007-05-10	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: getIdsArray() accepts empty lists
	now.

2007-05-08	Ivan Y. Khvostishkov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: default postfix.

2007-05-08	Konstantin V. Arkhipov

	* core/Exceptions/ClassNotFoundException.class.php,
	global.inc.php.tpl: classes paths cache backported from trunk; now
	throws ClassNotFoundException instead of fatal error when unable to
	find requested class; cache is off by default.

2007-05-08	Anton E. Lebedevich

	* core/Form/Filters/RemoveNewlineFilter.class.php: RemoveNewlineFilter
	added.

2007-05-05	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added ability to set
	View class.

2007-05-02	Anton E. Lebedevich

	* main/Flow/PartViewer.class.php: getModel() added.

2007-05-01	Sergey S. Sergeev

	* meta/builders/BaseBuilder.class.php: return query if setters are
	empty.

2007-04-30	Konstantin V. Arkhipov

	* 0.10.0 released.

2007-04-28	Dmitry Pismenny

	* core/Form/Filters/PCREFilter.class.php: limit added.

2007-04-27	Dmitry Pismenny

	* core/base/Session.class.php: minor styling.

	* core/base/Session.class.php: add getName() and getId() methods.

2007-04-22	Konstantin V. Arkhipov

	* meta/bin/build.php: --no-color switch implemented.
